--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -8,6 +8,11 @@
   outline: none;
   border: none;
   cursor: pointer;
+
+  /* testing out active focus settings */
+  /* --=== BIO == */
+  /*      WORK    */
+  /*   CONTACT    */
 }
 
 .btn--primary {
@@ -23,7 +28,7 @@
 
 .btn--medium {
   padding: 8px 20px;
-  font-size: 20px;
+  font-size: 24px;
 }
 
 .btn--large {
