update landing section
fixed Background.css
altered Button.css
added section separation effect
adjusted glitch-text pattern and the way special colors are assigned
fixed all(?) px units to rem

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,42 +1,47 @@
 
 :root {
-  --primary: #000;
+  --btn-primary: #ccc;
+  --btn-hover: #DCA3D7;
+  --btn-glow: #fcf4;
 }
 
 .btn {
-  padding: 8px 20px;
-  outline: none;
   border: none;
   cursor: pointer;
-
-  /* testing out active focus settings */
-  /* --=== BIO == */
-  /*      WORK    */
-  /*   CONTACT    */
+  outline: none;
+  user-select: none;
 }
 
 .btn--primary {
-  color: #aaa;
+  color: var(--btn-primary);
 }
 
 .btn--outline {
   background-color: transparent;
-  color: #aaa;
-  padding: 8px 20px;
+  color: var(--btn-primary);
   transition: all 0.3s ease-out;
 }
 
 .btn--medium {
-  padding: 8px 20px;
-  font-size: 24px;
+  padding: 0.5rem 1.2rem;
+  font-size: 1.5rem;
 }
 
 .btn--large {
-  padding: 12px 26px;
-  font-size: 20px;
+  padding: 0.75rem 1.5rem;
+  font-size: 2rem;
 }
 
-.btn--medium:hover, .btn--large:hover {
-  color: #fbe;
+.btn:hover,
+.btn:focus {
+  color: var(--btn-hover);
+  text-shadow: 0 0 0.4rem var(--btn-glow);
   transition: all 0.3s ease-out;
+}
+
+.btn:active {
+  color: red;
+  /*This is where I would add the lines, probably.
+    Except that the lines probably need to be separate elements.
+    Right?*/
 }
