--- a/src/components/header/HeaderLogo.css
+++ b/src/components/header/HeaderLogo.css
@@ -1,4 +1,10 @@
 
+/*
+I'm pretty sure I don't need to worry about these css classes bleeding over.
+Not in React, anyway.
+Make the names shorter, easier to type/read, etc.
+*/
+
 :root {
   --text-primary: #ccc;
   --text-special: #DCA3D7;
@@ -33,6 +39,13 @@
   display: flex;
   justify-content: flex-start;
   color: var(--text-primary);
+}
+
+.glitch-text-letter-overlay {
+  width: 100%;
+  height: 100%;
+  color: var(--text-primary);
+  transition: all 100ms ease-out;
 }
 
 .glitch-text-letter {
