--- a/src/components/common.css
+++ b/src/components/common.css
@@ -1,3 +1,6 @@
+:root {
+  --text-primary: #bbb;
+}
 
 .debug-border {
   border: 1px solid purple;
@@ -11,18 +14,38 @@
   float: right;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .text-right-adjusted {
   text-align: right;
 }
 
+/*
 body::-webkit-scrollbar {
   display: none;
-}
+} */
 
 body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 3rem;
+  font-size: 4rem;
+  color: var(--text-primary);
+}
+
+p {
+  margin: 0 0 1rem 0;
+  font-size: 1.3rem;
+  color: var(--text-primary);
+}
+
+/* TODO Where should these go? Below. */
 
 .section-glow-upward {
   position: relative;
