--- a/src/components/Section.scss
+++ b/src/components/Section.scss
@@ -12,10 +12,20 @@
 section {
   @extend %glow;
   background: linear-gradient(to bottom, #282228, #222022);
+
+  content {
+    max-width: 80rem;
+  }
+}
+
+// #landing {
+//   
+// }
+
+#bio {
   padding: 5rem 0;
 
   content {
     text-align: center;
-    max-width: 80rem;
   }
 }
