refactor component structure

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -11,12 +11,7 @@ $palette: (
     light: #979,
     lighter: #B9B
   ),
-  bg-gradient: (
-    // light: #602028,
-    light: #242024,
-    dark: #201720
-  ),
-  bg-gradient-r: linear-gradient(#602028, #241824)
+  bg-gradient: linear-gradient(#242024, #201720)
 );
 
 /**
