--- a/src/components/PortfolioItem.module.scss
+++ b/src/components/PortfolioItem.module.scss
@@ -1,48 +1,72 @@
 @use 'sass:color';
 
+$standardWidth: 1rem;
+$columnWidth: .75rem;
+
+@mixin outline {
+  // outline: 2px solid white;
+}
+
 .container {
-  flex: 1 1 40%;
-
-  margin: 1.25rem;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
+  flex: 1 1 40ch;
+  padding: $standardWidth * 1.5;
+  padding-bottom: $standardWidth * 2;
   background: color.adjust(#242024, $lightness: 18%);
-}
+  border: .1rem solid #FDE4;
+  box-shadow: .0rem .5rem .5rem 0 #0008;
 
-.title {
-  margin: 0;
-  padding-bottom: 1rem;
-  font-size: 2.2rem;
-  line-height: 2.2rem;
-  color: var(--text-primary);
-}
-
-.contentWrapper {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   align-items: flex-start;
+  align-content: flex-start;
+  gap: $standardWidth*1.75;
+}
+
+.header {
+  flex: 1 1 50ch;
+  display: flex;
+  flex-direction: column;
+  gap: $standardWidth;
+
+  @include outline;
+}
+
+.title {
+  margin: 0;
+  margin-bottom: $standardWidth / 2;
+  // padding-right: $standardWidth * 1;
+
+  font-size: 2.2rem;
+  line-height: 1.3;
+  word-spacing: $standardWidth * .35;
+  text-align: left;
+  color: var(--text-primary);
 }
 
 .visualWrapper {
-  flex: 1 1 20rem;
   display: flex;
 }
 
 .column {
+  $borderCutSize: $columnWidth;
+
   content: ' ';
-  width: .8rem;
-  height: auto;
-  margin-right: .8rem;
-  background: #A79;
+  width: $columnWidth;
+  margin-right: $columnWidth;
+  margin-left: -$borderCutSize;
+  
+  border-left: $borderCutSize solid transparent;
+  border-bottom: $borderCutSize*1.5 solid transparent;
+  border-right: $borderCutSize solid #A79;
 }
 
 .visual {
   content: ' ';
-  width: 100%;
-  height: 10rem;  // TODO Remove: determined by content.
-  margin-right: 1rem;
+  width: calc(100% - #{$columnWidth * 2});
+
+  border: .1rem solid #FDE4;
+  box-shadow: 0 .5rem .5rem 0 #0008;
 
   // TODO Monochrome; ease transition into color, video-playback on widget hover (not img hover)
   // This will, naturally, require javascript.
@@ -50,8 +74,12 @@
 
 .description {
   flex: 1 1 30ch;
-  min-width: 40%;
-  padding-right: 1rem;
-  font-size: 1.4rem;
+  padding-bottom: $standardWidth;
+  border-bottom: .2rem solid #BAB7;
+
+  @include outline;
+
   color: var(--text-primary);
+  font-size: 1.4rem;
+  text-align: justify;
 }
