--- a/src/components/home-partials/Portfolio.module.scss
+++ b/src/components/home-partials/Portfolio.module.scss
@@ -8,14 +8,17 @@
 
 .container {
   flex: 100%;
+  max-width: 150ch;
   margin: 5rem;
-  padding: 1.25rem;
+  padding: 2rem;
   background: color.adjust(#242024, $lightness: 8%);
+  box-shadow: inset .0rem .0rem .5rem 0 #0008;
 
   display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
-	align-items: flex-start;
+	align-items: stretch;
 	align-content: flex-start;
+  gap: 2rem;
 }
