--- a/src/components/home-partials/Portfolio.module.scss
+++ b/src/components/home-partials/Portfolio.module.scss
@@ -1,5 +1,7 @@
 @use 'sass:color';
 
+$gap-width: 3rem;
+
 .background {
   display: flex;
   justify-content: center;
@@ -7,18 +9,32 @@
 }
 
 .container {
-  flex: 100%;
-  max-width: 150ch;
-  margin: 5rem;
-  padding: 2rem;
+  // max-width: 140ch;
+  // margin: 5rem;
+  padding: $gap-width;
   background: color.adjust(#242024, $lightness: 8%);
-  box-shadow: inset .0rem .0rem .5rem 0 #0008;
+  box-shadow: inset 0 0 2rem .5rem #0008;
 
   display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
-	align-items: stretch;
+	align-items: center;
 	align-content: flex-start;
-  gap: 2rem;
+  gap: $gap-width;
+}
+
+
+// TODO Temporary
+
+.container {
+  position: relative;
+  overflow: hidden;
+}
+
+.image {
+  position: absolute;
+  top: -20%;
+  left: -20%;
+  width: 200%;
 }
