--- a/src/components/header/Footer.module.scss
+++ b/src/components/header/Footer.module.scss
@@ -1,12 +1,17 @@
 @use "sass:color";
 
 .background {
-  background: linear-gradient(to bottom, #343034 33%, #000 100%);
+  box-shadow: inset 0 .5rem .5rem 0 #000A;
+  background: color.adjust(#242024, $lightness: -3%);
+  background-size: cover;
+
+  user-select: none;
 }
 
 .text {
   padding: .25rem 1.5rem;
   font-size: 1.15rem;
+  letter-spacing: .2rem;
   text-align: right;
   color: var(--text-primary);
 }
