--- a/src/index.scss
+++ b/src/index.scss
@@ -2,13 +2,37 @@ html {
   scroll-behavior: smooth;
 }
 
-* {
+*, *::before, *::after {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+@font-face {
+  font-family: 'Nunito Sans';
+  src: url('resources/NunitoSans-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Nunito Sans';
+  src: url('resources/NunitoSans-Italic.ttf');
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Nunito Sans';
+  src: url('resources/NunitoSans-Bold.ttf');
+  font-weight: bold;
+}
+@font-face {
+  font-family: 'Nunito Sans';
+  src: url('resources/NunitoSans-BoldItalic.ttf');
+  font-weight: bold;
+  font-style: italic;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Nunito Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
