--- a/src/components/PortfolioItem.module.scss
+++ b/src/components/PortfolioItem.module.scss
@@ -59,16 +59,19 @@ $standardWidth: 1rem;
   padding: $standardWidth;
 
   position: absolute;
-  left: 0;
-  bottom: 0;
+  left: 0.1rem;
+  bottom: .5rem;
 
   max-width: 80%;
 
-  font-size: 1.7rem;
+  font-size: 1.6rem;
   line-height: 1.3;
-  word-spacing: $standardWidth * .3;
+  word-spacing: $standardWidth * .2;
+  letter-spacing: .1rem;
   text-align: left;
   color: #FFF;
 
+  border-top-right-radius: .8rem;
   background: #0006;
+  // background: linear-gradient(to top, #0008 50%, #0000);
 }
