--- a/src/components/header/Button.module.scss
+++ b/src/components/header/Button.module.scss
@@ -5,7 +5,7 @@ $letter-spacing: .1rem;
 $color-primary: var(--text-primary);
 $color-hover: #DAD;
 $color-glow: #FCF4;
-$color-active: palevioletred;
+$color-active: #E9B;
 
 $anim-time: .3s;
 
