--- a/src/components/header/Footer.module.scss
+++ b/src/components/header/Footer.module.scss
@@ -1,7 +1,7 @@
 @use "sass:color";
 
 .background {
-  box-shadow: inset 0 .5rem .5rem 0 #000A;
+  box-shadow: inset 0 .5rem .5rem 0 #0008;
   background: color.adjust(#242024, $lightness: -3%);
   background-size: cover;
 
@@ -9,7 +9,7 @@
 }
 
 .text {
-  padding: .25rem 1.5rem;
+  padding: .5rem 1.5rem;
   font-size: 1.15rem;
   letter-spacing: .2rem;
   text-align: right;
