--- a/src/components/home-partials/Portfolio.module.scss
+++ b/src/components/home-partials/Portfolio.module.scss
@@ -13,6 +13,7 @@ $gap-width: 3rem;
   // margin: 5rem;
   padding: $gap-width;
   background: color.adjust(#242024, $lightness: 8%);
+  background-size: cover;
   box-shadow: inset 0 0 2rem .5rem #0008;
 
   display: flex;
