--- a/src/components/header/Button.module.scss
+++ b/src/components/header/Button.module.scss
@@ -9,8 +9,44 @@ $color-active: #E9B;
 
 $anim-time: .3s;
 
-.button {
+.linkWrapper {
+  position: relative;
+  width: 100%;
+  text-align: right;
+}
+
+.lightbar {
+  width: 100%;
+  height: 100%;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+
+  border-right: .2rem solid var(--text-primary);
+
+  transition: opacity $anim-time/2 ease;
+  opacity: 0;
+}
+
+.light {
+  width: 100%;
+  height: 100%;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  background: linear-gradient(to left, #B8A, transparent);
+
+  transition: opacity $anim-time/2 ease;
+  opacity: .6;
+}
+
+.text {
   padding: 0.5rem 1.2rem;
+  font: 'Nunito Sans';
   font-size: $font-size;
   letter-spacing: $letter-spacing;
 
@@ -22,26 +58,20 @@ $anim-time: .3s;
   user-select: none;
   transition: all $anim-time ease;
 
-  // TODO tab-selecting these is hard to see
   &:hover, &:focus {
     outline: none;
-    color: $color-hover;
-    text-shadow: 0 0 0.4rem $color-glow;
-
-    .icon {
-      fill: $color-hover;
+    &::before {
+      content: '>';
+    }
+    .lightbar {
+      opacity: 1;
     }
   }
 
-  &:focus::before {
-    content: '>';
-  }
-
   &:active {
-    color: $color-active;
-
-    .icon {
-      fill: $color-active;
+    .light {
+      transition: opacity 0s ease;
+      opacity: .8;
     }
   }
 }
