--- a/src/components/header/Navbar.scss
+++ b/src/components/header/Navbar.scss
@@ -6,12 +6,10 @@
   width: 100%;
   z-index: var(--z-navbar);
 
-  /* Shadow effect for name readability. */
-  height: 25vh;
-  background: linear-gradient(to bottom, #060006B0, #0000 60%);
-
-  // TODO Add backdrop to logo and nav-menu.
-  // TODO Keep background as vignette on landing section.
+  // Vignette for readability
+  height: 100%;
+  box-shadow: inset 0 6rem 12rem -4rem black;
+  pointer-events: none;
 }
 
 .navbar-container {
@@ -24,6 +22,7 @@
 }
 
 .navbar-logo {
+  pointer-events: all;
   margin-top: 1.0rem;
   margin-left: 1.7rem;
 }
@@ -43,4 +42,8 @@
   display: flex;
   justify-content: flex-end;
   width: 100%;
+}
+
+.vignette {
+  
 }
