--- a/src/components/home-partials/Landing.module.scss
+++ b/src/components/home-partials/Landing.module.scss
@@ -2,25 +2,14 @@
 
 $height: calc(100vh - 3rem);
 
-.wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: $height;
-  overflow: hidden;
-}
-
 .landing {
+  position: relative;
   overflow: hidden;
+
   width: 100%;
-  
   height: $height;
   min-height: 25rem;
 
-  // $light: get(bg-gradient, light);
-  // $dark: get(bg-gradient, dark);
-  // background: map-get(colors.$palette, bg-gradient-r);
   background: colors.get(bg-gradient);
 }
 
@@ -44,11 +33,15 @@ $height: calc(100vh - 3rem);
 }
 
 .glow {
-  position: relative;
-  top: -3rem;
-  left: -3rem;
-  width: calc(100% + 6rem);
-  height: calc(#{$height} + 3rem);
-  box-shadow: inset 0 0 0.5rem .20rem #E9D,
-              inset 0 0 2.5rem .80rem #E9D8;
+  width: 100%;
+  height: 80rem;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: radial-gradient(ellipse 1500% 15% at 50% 100%, #E9C 2%, #A7A6 4%, #8050C01C 35%, transparent);
+
+  // box-shadow: inset 0 -10.3rem .5rem -10rem #E9C,    // Old separator style
+  //             inset 0 -12.0rem  3rem -10rem #A7A8,
+  //             inset 0 -11.5rem  9rem -10rem #85C4;
 }
