fix... weird opacity bug with production build

--- a/src/components/PortfolioItem.module.scss
+++ b/src/components/PortfolioItem.module.scss
@@ -34,7 +34,7 @@ $standardWidth: 1rem;
 .frostedGlass {
   padding: $standardWidth * 2;
   background-color: #FFF1;
-  opacity: 66%;
+  opacity: .66;
 }
 
 .visualWrapper {
