add props to allow GlitchText style overrides (non-functional)

--- a/src/components/header/HeaderLogo.scss
+++ b/src/components/header/HeaderLogo.scss
@@ -12,8 +12,11 @@
   position: relative;
 
   min-width: 40ch;
+  width: fit-content;
+
   display: flex;
-  align-content: center;
+  align-items: center;
+
   margin-top: 1rem;
   margin-left: 0.5rem;
 
@@ -30,9 +33,11 @@
 }
 
 .logo-text {
-  position: absolute;
   font-size: 2.2rem;
-  transform: translate(1.5%, 53%); // TODO What?
+  transform: translate(1.65%, -17%);
+
+  display: flex;
+  align-items: center;
 }
 
 .logo-text-glow {
@@ -51,27 +56,16 @@
   box-shadow: 0 1rem 1.4rem -1rem #A796;
 }
 
-.glitch-text {
-  margin-top: -.075rem;
 
-  width: fit-content;
-  height: 3rem;
-  display: flex;
-  justify-content: flex-start;
-  color: var(--text-primary);
+
+.glitch-text {
+  // margin-top: -.075rem;
+  // outline: 1px solid white;
 }
 
 .glitch-text-letter {
-  display: flex;
-  justify-content: center;
-  width: 2rem;
-}
-
-.glitch-text-special {
-  color: var(--text-special);
-}
-
-.glitch-text-separator {
-  width: 0.5rem;
-  color: var(--text-special-dark);
+  width: 1.5rem;
+  height: 1.5rem;
+  font-size: 1.2rem;
+  color: green;   // TODO For some reason, this class cannot override the text's own letter style.
 }
