--- a/src/components/header/HeaderLogo.scss
+++ b/src/components/header/HeaderLogo.scss
@@ -59,13 +59,13 @@
 
 
 .glitch-text {
-  // margin-top: -.075rem;
-  // outline: 1px solid white;
+  // width: 100%;
+  // height: 4rem;
 }
 
 .glitch-text-letter {
   width: 1.5rem;
-  height: 1.5rem;
-  font-size: 1.2rem;
-  color: green;   // TODO For some reason, this class cannot override the text's own letter style.
+  height: 1.7rem;
+  font-size: 1.7rem;
+  color: var(--text-primary);
 }
