--- a/src/components/PortfolioItem.module.scss
+++ b/src/components/PortfolioItem.module.scss
@@ -2,59 +2,141 @@
 
 $standardWidth: 1rem;
 
-.container {
-  user-select: none;
-  z-index: var(--z-content);
+.block {
+  margin: 0;
+  padding: 0;
 
-  width: 45%;
-  min-width: 24rem;
-  max-width: 36rem;
-
-  border: .1rem solid #BAB7;
-  padding: $standardWidth * 2;
-  backdrop-filter: blur(.3rem);
-
-  $drop-shadow: .0rem .5rem .5rem 0 #0008;
-  $glow-shadow: .0rem .5rem .5rem 0 #A792;
-
-  transition: box-shadow .3s ease, background-color .3s ease;
-  box-shadow: $drop-shadow;
-
-  &:hover, &:focus {
-    box-shadow: $drop-shadow, $glow-shadow;
-    background-color: #A791;
-  }
-
-  // Makes single-column more bigly
-  @media (max-width: 72rem) {
-    width: 100%;
-  }
+  width: 100vw;
 }
 
-.frostedGlass {
-  padding: $standardWidth * 2;
-  background-color: #FFF1;
-  opacity: .66;
-}
-
-.visualWrapper {
+.preview {
   position: relative;
+  width: 100%;
+  max-height: 24rem;  // TODO ..?
+
   overflow: hidden;
 }
 
-.visual {
+.previewImage {
+  min-width: 100%;
+  min-height: 100%; // TODO Is this cover behavior? I forget. Look at Landing.scss
+
+  position: relative;
+  transform: translate(-50%, -25%); // TODO This won't center for some reason.
+  top: 0%;                          // Like, top here does *nothing*.
+  left: 50%;
+
+  filter: brightness(50%) saturate(20%);
+}
+
+.gradientOverlay {
   width: 100%;
-  border: .1rem solid #4444;
+  height: 100%;
 
-  transition: filter .3s ease;
-  filter: grayscale(85%) contrast(115%) brightness(50%);
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  background: radial-gradient(ellipse 135% 190% at 0% 0%, transparent 50%, #A794 70%, #8694 100%);
+  // TODO Overlay modes? Additive?
 }
 
-.visualHover {
-  filter: none;
+.titleText {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
 }
 
-.title {
+.titleLetters {
+  color: var(--text-primary);
+  width: 4rem;
+  height: 5rem;
+  font-size: 4rem;
+  font-weight: 600;
+}
+
+.body {
+  position: relative;
+  margin: 0 auto;
+  width: 90%;
+}
+
+.main {
+  display: inline-block;
+
+  padding-top: 1rem;
+  margin-right: 2rem;
+  width: calc(100% - 10ch);
+  max-width: 70ch;
+  color: var(--text-primary);
+  font-size: 1.5rem;
+
+  overflow: hidden;
+}
+
+.technologies {
+  padding-left: .8rem;
+  font-size: 1.4rem;
+  opacity: 50%;
+  // TODO Diff typeface
+}
+
+.description {
+  margin-top: 1rem;
+}
+
+.endbar {
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+  width: 16ch;
+  height: .4rem;
+  background: #A79;
+}
+
+.sidebar {
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+
+  // position: absolute;
+  // top: 0;
+  // right: 0;
+
+  width: 10ch;
+  height: 100%;
+  min-height: 10rem;
+}
+
+.sidebarSeparator {
+  position: absolute;
+  top: 0;
+  left: -.6rem;
+
+  width: .3rem;
+  height: 100%;
+  max-height: 10rem;
+  background: #A79;
+}
+
+.link {
+  margin: 0;
+
+  width: 100%;
+  height: 2rem;
+  background: #A79;
+
+  outline: none;
+  border: none;
+
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  letter-spacing: .2rem;
+  
+}
+
+.asfe-title {
   margin: 0;
   padding: $standardWidth;
 
@@ -74,11 +156,4 @@ $standardWidth: 1rem;
   border-top-right-radius: .8rem;
   background: #0006;
   // background: linear-gradient(to top, #0008 50%, #0000);
-}
-
-.titleText {
-  color: var(--text-primary);
-  width: 1.2rem;
-  height: 2rem;
-  font-size: 1.4rem;
 }
