--- a/src/components/header/Footer.module.scss
+++ b/src/components/header/Footer.module.scss
@@ -9,7 +9,12 @@
 }
 
 .text {
+  margin: 0 auto;
   padding: .3rem 1.5rem;
+
+  width: 100%;
+  max-width: 100rem;
+
   font-size: 1rem;
   letter-spacing: .15rem;
   text-align: right;
