refine PortfolioItem styles

--- a/src/components/PortfolioItem.module.scss
+++ b/src/components/PortfolioItem.module.scss
@@ -11,14 +11,18 @@ $standardWidth: 1rem;
 .preview {
   position: relative;
   width: 100%;
-  max-height: 24rem;  // TODO ..?
+  max-height: 24rem;
 
+  z-index: 10;
   overflow: hidden;
+
+  $shadow: .4rem;
+  box-shadow: 0 $shadow*2/3 $shadow $shadow/4 #0006;
 }
 
 .previewImage {
   min-width: 100%;
-  min-height: 100%; // TODO Is this cover behavior? I forget. Look at Landing.scss
+  min-height: 100%;
 
   position: relative;
   transform: translate(-50%, -25%); // TODO This won't center for some reason.
@@ -73,15 +77,11 @@ $standardWidth: 1rem;
 
   display: flex;
   justify-content: center;
-
-  // background: #242024;
 }
 
 .mainWrapper {
   width: 100%;
   max-width: 100rem;
-
-  // background: color.adjust(#242024, $lightness: 5%);
 }
 
 .main {
@@ -90,7 +90,7 @@ $standardWidth: 1rem;
   margin: 1rem 2rem 0 1rem;
 
   width: calc(100% - 22rem);
-  min-width: 30ch;        // TODO Add a media break here so that {width: calc(100% - 10ch);} instead.
+  min-width: 40ch;        // TODO Add a media break here so that {width: calc(100% - 10ch);} instead.
   max-width: 60ch;          
     // TODO What to do with that extra space on the right side?
     // TODO Further, when sidebar and navbar collide, the latter should turn into a hamburer menu or something.
@@ -103,9 +103,30 @@ $standardWidth: 1rem;
 
 .technologies {
   padding-left: .8rem;
-  font-size: 1.4rem;
   opacity: 50%;
+
   // TODO Diff typeface
+  font-size: 1.1rem;
+  letter-spacing: .2rem;
+}
+
+.technologyWord {
+  $gap: 2rem;
+
+  display: inline-block;
+  margin-right: $gap;
+
+  &::after {
+    content: '/';
+    position: relative;
+    left: $gap / 2;
+  }
+
+  &:last-child {
+    &::after {
+      content: '';
+    }
+  }
 }
 
 .description {
@@ -113,43 +134,55 @@ $standardWidth: 1rem;
 }
 
 .endbar {
-  margin-top: 1rem;
-  margin-bottom: 3rem;
+  $margin: 1.25rem;
+  margin-top: $margin;
+  margin-bottom: $margin * 2;
+
   width: 16ch;
   height: .4rem;
   background: #A79;
+  border-radius: 1rem;
 }
 
-.sidebar {
+.sidebarWrapper {
   display: inline-block;
   position: relative;
   vertical-align: top;
-
-  // position: absolute;
-  // top: 0;
-  // right: 0;
-
-  width: 10ch;
-  height: 100%;
-  min-height: 10rem;
+  overflow: hidden;
 }
 
-.sidebarSeparator {
-  position: absolute;
-  top: 0;
-  left: -.6rem;
+.sidebar {
+  width: 10ch;
+  min-height: 9rem;
 
-  width: .3rem;
-  height: 100%;
-  max-height: 10rem;
-  background: #A79;
+  $barWidth: .3rem;
+  border-left: $barWidth solid #A79;
+  padding-left: $barWidth;
+
+  // Draw a shadow from the preview image over the link menu.
+  &::before {
+    content: '';
+
+    position: absolute;
+    top: -1rem;
+    left: 0;
+
+    width: 100%;
+    height: 1rem;
+
+    $shadow: .4rem;
+    box-shadow: 0 0rem $shadow $shadow/2 #0008;
+  }
 }
 
 .link {
+  display: block;
+
   margin: 0;
+  padding: .5rem .5rem;
 
   width: 100%;
-  height: 2rem;
+  height: 2.5rem;
   background: #A79;
 
   outline: none;
@@ -158,32 +191,21 @@ $standardWidth: 1rem;
   color: white;
   font-size: 1.5rem;
   font-weight: 500;
+  text-decoration: none;
   line-height: 1.8rem;
   letter-spacing: .2rem;
   
   &:hover, &:focus {
     background: color.adjust(#A79, $lightness: 12%, $saturation: 12%);
   }
-}
 
-.asfe-title {
-  margin: 0;
-  padding: $standardWidth;
+  &:first-child {
+    height: 3rem;
+    padding-top: 1rem;
+  }
 
-  position: absolute;
-  left: 0.1rem;
-  bottom: .5rem;
-
-  max-width: 80%;
-
-  font-size: 1.6rem;
-  line-height: 1.3;
-  word-spacing: $standardWidth * .2;
-  letter-spacing: .1rem;
-  text-align: left;
-  color: #FFF;
-
-  border-top-right-radius: .8rem;
-  background: #0006;
-  // background: linear-gradient(to top, #0008 50%, #0000);
+  &:last-child {
+    border-bottom-left-radius: .2rem;
+    border-bottom-right-radius: .2rem;
+  }
 }
