--- a/src/components/PortfolioItem.module.scss
+++ b/src/components/PortfolioItem.module.scss
@@ -40,7 +40,8 @@ $standardWidth: 1rem;
   top: 0;
   left: 0;
 
-  background: radial-gradient(ellipse 135% 190% at 0% 0%, transparent 50%, #A794 70%, #8694 100%);
+  background: radial-gradient(ellipse 102% 280% at 0% 0%, transparent 50%, #A79 70%, #86B 82%, #68B);
+  mix-blend-mode: overlay;
   // TODO Overlay modes? Additive?
   // TODO Add cloud texture? Can I white mask an element or repeated image?
 }
@@ -50,7 +51,7 @@ $standardWidth: 1rem;
   top: 0;
   left: 0;
 
-  // margin-top: 1rem;
+  margin-top: 1rem;
   margin-left: 1rem;
   width: 100%;
 
