fix weird opacity issue on build

--- a/src/components/PortfolioItem.module.scss
+++ b/src/components/PortfolioItem.module.scss
@@ -103,7 +103,7 @@ $standardWidth: 1rem;
 
 .technologies {
   padding-left: .8rem;
-  opacity: 50%;
+  opacity: .5;
 
   // TODO Diff typeface
   font-size: 1.1rem;
