--- a/src/components/PortfolioItem.module.scss
+++ b/src/components/PortfolioItem.module.scss
@@ -111,6 +111,7 @@ $standardWidth: 1rem;
   margin-left: -.1rem;
   margin-right: 2rem;
   padding: 1rem;
+  padding-top: 1.5rem;
 
   width: calc(100% - 22rem);
   min-width: 40ch;        // TODO Add a media break here so that {width: calc(100% - 10ch);} instead.
@@ -121,7 +122,7 @@ $standardWidth: 1rem;
   color: var(--text-primary);
   font-size: 1.5rem;
 
-  box-shadow: 1.5rem 0 1.5rem -1.5rem #0008;
+  box-shadow: 1.75rem .75rem 1.5rem -1.75rem #0008;
 
   overflow: hidden;
 }
