--- a/src/components/home-partials/Portfolio.module.scss
+++ b/src/components/home-partials/Portfolio.module.scss
@@ -5,10 +5,13 @@ $gap-width: 3rem;
 .background {
   display: flex;
   justify-content: center;
-  background: var(--bg-color);
+  background: color.adjust(#242024, $lightness: -3.5%);
 }
 
 .container {
+  // width: 100%;
+  background: var(--bg-color);
+
   display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
